infrastructure/kubernetes/networking/cilium-policy.yaml
apiVersion: cilium.io/v2alpha1
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-internal-traffic
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            namespace: food-subscription
  egress:
    - toEndpoints:
        - matchLabels:
            namespace: food-subscription
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kafka
